# elastic-bulk-uploader

./: .env.sample  .gitignore  README.md  elastic.py  pyproject.toml  requirements.txt  test_data_generator.py
configs/: index-config.json
docs/: 0a2cc0af-59fc-46ad-8fd9-95eef8b086ab.json
